Lab/VPC-Create/security-group.tf
//Security Group
resource "aws_security_group" "demo-vpc-sg" {
 name = "demo-vpc-sg"
 vpc_id = aws_vpc.demo-vpc.id

ingress {
   from_port   = 22
   to_port     = 22
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 }

egress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"
   cidr_blocks = ["0.0.0.0/0"]
 }
}
